Source/WebCore/platform/graphics/MediaPlayerPrivate.h
@@ -56,6 +56,7 @@ public:
 
     virtual bool supportsFullscreen() const { return false; }
     virtual bool supportsSave() const { return false; }
+    virtual bool supportsScanning() const { return false; }
 
     virtual IntSize naturalSize() const = 0;
 
